[poc/accessibility-checker-in-editor] Adjust CSS to ensure that the left cell of the editor is stacked above the right cell so that the Show Me outline is visible. Adjust axe-core configuration to only scan the preview iFrame that is visible when editing, not the one that is in the "Preview" tab (both are rendered in the page).

--- a/packages/perseus-editor/src/styles/perseus-editor.css
+++ b/packages/perseus-editor/src/styles/perseus-editor.css
@@ -286,6 +286,8 @@ code {
     width: 360px;
     max-width: 360px;
     min-width: 360px;
+    position: relative;
+    z-index: 10;
 }
 .perseus-editor-right-cell {
     box-sizing: border-box;
